# telestrip

./: LICENSE  Pipfile  collector.py  pyproject.toml
telestrip/: base.py  comic_strips.py  database.py  helpers.py  main.py
