[tool.poetry]
name = "telestrip"
version = "0.1.0"
description = ""
authors = ["Kirill Borisov <lensvol@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6"
beautifulsoup4 = "^4.8"
feedparser = "^5.2.1"
attrs = "^19.3.0*"
pendulum = "^2.0"
pytz = "^2019.3"
aiotg = "^1.0"
colorama = "^0.4.1"
ipython = "^7.10"


[tool.poetry.dev-dependencies]
ipdb = "^0.12.2"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
